# wallp

./: Cargo.toml  README.md
src/: main.rs
src/services/: add_wallp_dirs.rs  mod.rs  preview_or_apply_wallpapers.rs
src/structs/: mod.rs
src/utils/: bootstrap.rs  deserialize_data.rs  get_available_monitors.rs  get_render_config.rs  mod.rs  read_file.rs  serialize_data.rs  spawn_feh.rs
