[package]
name = "wallp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inquire = { version = "0.6.2", features = ["date"] }
colored = "2"
home = "0.5.5"
regex = "1.9.1"
clap = { version = "4.3.11", features = ["derive"] }
toml = "0.7.6"
serde = "1.0.167"
serde_derive = "1.0.167"
itertools = "0.11.0"