[package]
name = "wallp"
version = "0.1.0"
edition = "2021"
authors = ["Gabriel Rasteli"]
license = "MIT"
description = "CLI tool to set and preview wallpapers with feh."
readme = "README.md"
homepage = "https://github.com/rasteli/wallp#readme"
documentation = "https://github.com/rasteli/wallp#readme"
repository = "https://github.com/rasteli/wallp"
keywords = ["cli", "feh", "inquire"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inquire = { version = "0.6.2", features = ["date"] }
colored = "2"
home = "0.5.5"
regex = "1.9.1"
clap = { version = "4.3.11", features = ["derive"] }
toml = "0.7.6"
serde = "1.0.167"
serde_derive = "1.0.167"
itertools = "0.11.0"

[[bin]]
name = "wallp"
path = "src/main.rs"
